# mainai-primitives

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
agents/: content-pipeline.yml  reviewer.yml
js-runner/: package-lock.json  package.json  tsconfig.json
js-runner/src/: claude-runner.ts  demo.ts  index.ts  ingest.ts  mainai.ts  mcp-config.ts
js-runner/src/tools/: classify.ts  gmail.ts  obsidian.ts  url-fetcher.ts
src/mainai_primitives/: __init__.py  claude_runner.py  env.py  mcp_config.py  output_parser.py
tests/: test_claude_runner.py  test_env.py  test_mcp_config.py  test_output_parser.py
