[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainai-primitives"
version = "0.1.0"
description = "Reusable primitives for running Claude CLI, extracting MCP configs, and parsing structured output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Christian Nogueras" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
